@@ -5,7 +5,7 @@
 
   <groupId>org.myberry</groupId>
   <artifactId>myberry-all</artifactId>
-  <version>2.1.0</version>
+  <version>2.2.0</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2018</inceptionYear>
@@ -13,11 +13,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <properties.encoding>UTF-8</properties.encoding>
     <!-- Compiler settings properties -->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
   </properties>
 
   <modules>
@@ -34,19 +34,13 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.0</version>
+          <version>3.10.1</version>
           <configuration>
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
             <compilerVersion>${maven.compiler.compilerVersion}</compilerVersion>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
-            <compilerArguments>
-              <verbose/>
-              <bootclasspath>
-                ${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar${path.separator}${java.home}/lib/jsse.jar
-              </bootclasspath>
-            </compilerArguments>
           </configuration>
         </plugin>
         <plugin>
@@ -66,6 +60,7 @@
           <version>3.2.0</version>
           <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
+            <propertiesEncoding>${properties.encoding}</propertiesEncoding>
           </configuration>
         </plugin>
         <plugin>
@@ -74,6 +69,10 @@
           <configuration>
             <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
+            <argLine>
+              --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+              --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -83,7 +82,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.7</version>
+          <version>0.8.8</version>
           <executions>
             <execution>
               <id>prepare-agent</id>
@@ -164,6 +163,12 @@
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>1.5.0</version>
+      </dependency>
+      <!-- asm -->
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>9.3</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
